<resources>
    <string name="app_label">T-Mobile Diagnostics</string>
    <string name="update_interval">Update Interval</string>
    <string name="fastes_update_interval">Fastes Update Interval</string>
    <string name="location_accuracy">Location Accuracy</string>
    <string name="leak_canary_test_class_name">assertk.Assert</string>
    <string name="update_interval_prompt">Update Interval</string>
    <string name="fastest_update_interval_prompt">Fastest Update Interval</string>
    <string name="location_accuracy_prompt">Location Updates</string>
    <string name="offers">Offers</string>
    <string name="issue_assist">Issue Assist</string>
    <string name="diagnostics_agreed">Diagnostics Agreed</string>
    <string name="get_user_consent_flags">Get User Consent Flags</string>
    <string name="get_user_consent_updates">Get User Consent Updates</string>
    <string name="voice">Voice Reports</string>
    <string name="reporting">Reporting module</string>
    <string name="lte">LTE Reports</string>
    <string name="nr5g">NR5G Reports</string>
    <string name="analytics">Analytics Reports</string>
    <string name="configuration_label">Configuration</string>
    <string name="coverage">Coverage Reports</string>
    <string name="deviceInfo">Device Information</string>
    <string name="flavorInfo">Flavor Information</string>
    <string name="pocTools">OEM Tools</string>
    <string name="pocToolsDataMetrics">Data Metrics 5GSA/LTE</string>
    <string name="pocToolsVoice">VoLTE/VoNR</string>
    <string name="pocToolsAdb">Adb/Test commands</string>
    <string name="pocTools5gSaDataMetrics">5G SA DataMetrics</string>
    <string name="pocToolsNsa5gDataMetrics">NSA 5G DataMetrics</string>
    <string name="testPublicApi">Test Public API</string>
    <string name="networkScan">Network Scan</string>
    <string name="lteDataMetrics">LTE Data Metrics</string>
    <string name="hint_date">mm/dd/yyyy</string>
    <string name="hint_from_date"><font size="14">mm/dd/yyyy</font></string>
    <string name="hint_to_date"><font size="14">mm/dd/yyyy</font></string>
    <string name="btn_all_reports">NSA 5G \n Get Report</string>
    <string name="btn_get_report">5G Report \n Apply change</string>
    <string name="btn_raw_report">NSA 5G \n Process Data</string>
    <string name="btn_raw_report_coverage">COVERAGE \n Process Data</string>
    <string name="btn_all_reports_coverage">COVERAGE \n Get Report</string>
    <string name="btn_generate_dummy_data_voice">Generate \n dummy data</string>
    <string name="btn_all_reports_voice">VOICE \n Get Report</string>
    <string name="btn_get_report_voice">VOICE Report \n by time frame</string>
    <string name="btn_raw_report_voice">VOICE \n Process Data</string>
    <string name="btn_all_reports_lte">LTE \n Get Report</string>
    <string name="btn_get_report_lte">LTE Report \n by time frame</string>
    <string name="btn_raw_report_lte">LTE \n Process Data</string>
    <string name="field_non_empty_msg">Field cannot be empty</string>
    <string name="date_parse_msg">Enter date in correct format</string>
    <string name="hint_save_report">Save Report</string>
    <string name="send_5g_report">5G \n Send Report</string>
    <string name="report_status_success">Report saved successfully</string>
    <string name="report_status_failure">Failed to save the report</string>
    <string name="token_hint"><font size="16">Authorization token</font></string>
    <string name="analytics_generate_report">Generate Analytics Report</string>
    <string name="coverage_generate_report">Generate \n Coverage Report</string>
    <string name="generate_analytics_event">Generate Analytics Event</string>
    <string name="analytics_process_crashes">Get App Stats</string>
    <string name="analytics_info_text"><font size="10">Analytics report generated by request from reporting module</font></string>
    <string name="adb_5gsa_proxy_info_text"><font size="10">
        for TmoProxyDebug build version:  adb shell am start -n com.tmobile.pr.mytmobile/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM 5G_SA_REPORT -e TEST_ACTION 5G_SA</font></string>
    <string name="adb_5gsa_dev_info_text"><font size="10">
        for devDebug build version:  adb shell am start -n com.tmobile.echolocate/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM 5G_SA_REPORT -e TEST_ACTION 5G_SA</font></string>
    <string name="adb_lte_report_proxy"><font size="10">for TmoProxyDebug: adb shell am start -n com.tmobile.pr.mytmobile/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM LTE_REPORT -e TEST_ACTION LTE</font></string>
    <string name="adb_lte_report"><font size="10">for devDebug: adb shell am start -n com.tmobile.echolocate/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM LTE_REPORT -e TEST_ACTION LTE</font></string>
    <string name="adb_nsa5g_report_proxy"><font size="10">for TmoProxyDebug: adb shell am start -n com.tmobile.pr.mytmobile/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM NSA5G_REPORT -e TEST_ACTION NSA5G</font></string>
    <string name="adb_nsa5g_report"><font size="10">for devDebug: adb shell am start -n com.tmobile.echolocate/com.tmobile.mytmobile.echolocate.playground.activities.OEMToolHomeActivity -e TEST_PARAM NSA5G_REPORT -e TEST_ACTION NSA5G</font></string>
    <string name="prerequisites">Prerequisites: Please make sure the User consent has been accepted from the T-Mobile Application.</string>
    <string name="steps"><font size="14">Steps</font></string>
    <string name="step1"><font size="14">Step 1: Make a voice call</font></string>
    <string name="step2"><font size="14">Step 2: Verify the logs at %s</font></string>
    <string name="path_1"><font size="10">Android 10: /sdcard/com.tmobile.echolocate.log.manually_5gsa.log</font></string>
    <string name="path_2"><font size="10">Android 11: /sdcard/Android/data/com.tmobile.echolocate/cache/dia_debug/log_sa5g_datametrics.txt</font></string>
    <string-array name="update_interval_request_params">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="fastest_update_interval_request_params">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="location_accuracy_request_params">
        <item>100</item>
    </string-array>
    <string name="btn_hourly_trigger">Hourly Trigger</string>
    <string name="btn_stop_hourly_trigger">Stop Hourly Trigger</string>
    <string name="hint_trigger_count"><font size="12">Trigger Count</font></string>
    <string name="set_trigger_count">Set \n Trigger Count</string>
    <string name="generateheartbeatdata">GenerateHeartBeat</string>
    <string name="screen_trigger">Screen Trigger</string>
    <string name="app_trigger">App Trigger</string>
    <string name="screen_trigger_count"><font size="12">Screen Trigger</font></string>
    <string name="app_trigger_count"><font size="12">App Trigger</font></string>
    <string name="set_screen_trigger_count">Set Screen \n Trigger Count</string>
    <string name="set_app_trigger_count">Set App \n Trigger Count</string>
    <string name="sa5g_collect_data">SA 5G \n Collect Data</string>
    <string name="sa5g_process_data">SA 5G \n Process Data</string>
    <string name="sa5g_generate_report">SA 5G \n Get Report</string>
    <string name="sa_5g_enabled"><font size="10">SA 5G Enabled</font></string>
    <string name="provider_read_permission_description">Permission to allow any app signed with same keystore as Echolocate/diagnostic application to read data from exposed Content Provider.</string>
    <string name="provider_read_permission_label">Read permission for Content Provider</string>
    <string name="permission_broadcast_intents_description">Permission to allow any app signed with same keystore as Echolocate/diagnostic application to receive broadcast intents from the Echolocate/diagnostic application.</string>
    <string name="permission_broadcast_intents_label">Permission for Broadcast Receiver</string>
    <string name="btn_get_device_info">Get device \ninformation</string>
    <string name="btn_clear_device_info">Clear device \ninformation</string>
    <string name="get_location_async">Get Location Async</string>
    <string name="start_location_module">Start Location Module</string>
    <string name="get_location_sync">Get Location sync</string>
    <string name="get_location_updates">Get Location Updates</string>
    <string name="stop_location_module">Stop Location Module</string>
    <string name="get_data_from_datametrics">Get Data from DataMetrics</string>
    <string name="get_data_from_datametrics5gsa">Get Data from DataMetrics5gSa</string>
    <string name="data_metrics_unavailable">Data Metrics Unavailable</string>
    <string name="data_metrics_data_generated">Data Metrics Data Generated</string>
    <string name="btn_get_flavor_config">Get Flavor Urls</string>
    <string name="btn_clear_flavor_config">Clear</string>
    <string name="dolphin">DIA Diagnostics App</string>
    <string name="dolphin_popup_title">Dolphin Reports</string>
    <string name="data_transfer_header">Data transfer</string>
    <string name="data_transfer_description">As default, Echolocate reports are transferred to the cloud hourly. If you want to send data on demand, you can push the SEND button to trigger immediate data transfer.</string>
    <string name="upload_time_header">Last upload time</string>
    <string name="report_queue_header">Report Queue</string>
    <string name="refresh_queue_description">A List of files that have not been sent. If this is empty, no files are available to be sent.</string>
    <string name="file_header">File</string>
    <string name="file_status_header">Status</string>
    <string name="http_error_header">Error</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh</string>
    <string name="file_name">File Link</string>
    <string name="file_status">NOT_SENT</string>
    <string name="report_http_error">Not yet sent</string>
    <string name="voice_module_not_ready">Voice module is not yet ready</string>
    <string name="report_module_not_ready">Report module is not yet ready</string>
    <string name="no_reports_send_no_network">No reports sent (No Network)</string>
    <string name="no_reports_to_send">No reports to send</string>
    <string name="reports_sending_failed">Reports sending failed</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_consent_flag_denied">No data collection as the user consent is denied.
        \nClick on \"Settings\" to update user consent</string>
    <string name="msg_diagapp_not_preloaded">TMobile Diagnostics App is not preloaded,
        and so the Dolphin app will not work properly.</string>
    <string name="log">Get all Metrics SA 5G</string>
    <string name="get_settingslog">get \n SettingsLog</string>
    <string name="get_dlcarrierlog">get \n DlCarrierLog</string>
    <string name="get_networklog">get \n NetworkLog</string>
    <string name="get_ulcarrierlog">get \n UlCarrierLog</string>
    <string name="get_uilog">get \n UiLog</string>
    <string name="get_rrclog">get \n RrcLog</string>
    <string name="get_apiversion">get \n ApiVersion</string>
    <string name="get_carrierconfig">get \n CarrierConfig</string>
    <string name="get_all_lte_log">Get all LTE DataMetrics Log</string>
    <string name="lte_apiVersion">get ApiVersion</string>
    <string name="lte_networkIdentity">get NetworkIdentity</string>
</resources>