<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/update_interval_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/update_interval"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Spinner
            android:id="@+id/update_interval_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/module_grid_bg"
            android:entries="@array/update_interval_request_params"
            android:prompt="@string/update_interval_prompt"
            app:layout_constraintTop_toTopOf="@id/update_interval_textview"
            app:layout_constraintBottom_toBottomOf="@id/update_interval_textview"
            app:layout_constraintStart_toEndOf="@id/update_interval_textview"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/location_accuracy_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_interval_textview"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:text="@string/location_accuracy"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_interval_textview"/>


        <Spinner
            android:id="@+id/location_accuracy_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/module_grid_bg"
            android:entries="@array/location_accuracy_request_params"
            android:prompt="@string/location_accuracy_prompt"
            app:layout_constraintStart_toEndOf="@id/location_accuracy_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/location_accuracy_textview"
            app:layout_constraintBottom_toBottomOf="@id/location_accuracy_textview"/>

        <TextView
            android:id="@+id/fastest_update_interval_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_accuracy_textview"
            android:layout_marginStart="40dp"
            android:layout_marginTop="26dp"
            android:text="@string/fastes_update_interval"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_accuracy_textview"/>

        <Spinner
            android:id="@+id/fastest_update_interval_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/module_grid_bg"
            android:entries="@array/fastest_update_interval_request_params"
            android:prompt="@string/fastest_update_interval_prompt"
            app:layout_constraintStart_toEndOf="@id/fastest_update_interval_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fastest_update_interval_textview"
            app:layout_constraintBottom_toBottomOf="@id/fastest_update_interval_textview"/>

        <Button
            android:id="@+id/start_location_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@color/magenta"
            android:gravity="center"
            android:text="@string/start_location_module"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fastest_update_interval_textview"/>

        <Button
            android:id="@+id/get_location_async_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/magenta"
            android:gravity="center"
            android:text="@string/get_location_async"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_location_btn" />

        <Button
            android:id="@+id/get_location_sync_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/magenta"
            android:gravity="center"
            android:text="@string/get_location_sync"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_location_async_btn" />

        <Button
            android:id="@+id/get_location_updates_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/get_location_sync_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/magenta"
            android:text="@string/get_location_updates"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_location_sync_btn" />

        <Button
            android:id="@+id/stop_location_module_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/get_location_updates_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/magenta"
            android:text="@string/stop_location_module"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_location_updates_btn" />

        <ScrollView
            android:id="@+id/scrollView_result"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="8dp"
            android:background="@drawable/module_grid_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_location_module_btn" >
            <TextView
                android:id="@+id/location_response_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stop_location_module_btn" />
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
