<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_generate_analytics"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@color/magenta"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="generateAnalyticsReport"
                android:padding="6dp"
                android:text="@string/analytics_generate_report"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_process_test_data"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@color/magenta"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="generateAnalyticsEvent"
                android:padding="6dp"
                android:text="@string/generate_analytics_event"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_analytics_info"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:text="@string/analytics_info_text"
            android:textAlignment="center"
            android:textColor="@color/magenta"
            android:textColorHint="@color/colorAccent"
            android:textSize="12sp"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_analytics_reports"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/module_grid_bg"
            android:fadeScrollbars="false"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@color/magenta"
            android:textColorHint="@color/colorAccent"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_Get_App_Stats"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:background="@color/magenta"
                android:textColor="@color/white"
                android:text="@string/analytics_process_crashes"/>

            <TextView
                android:id="@+id/tv_app_start_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_app_crash_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_app_anr_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_app_reboot_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>